--- a/main.css
+++ b/main.css
@@ -1,9 +1,73 @@
+body {
+  margin: 0;
+}
+
+#navbar {
+  background: #0E0E0E;
+  text-align: center;
+  padding-bottom: 0.5%;
+  padding-top: 1%;
+}
+
+#navbar img {
+  margin-bottom: 1.3%;
+  width: 12%;
+}
+
+#navbar ul li {
+  display: inline;
+  padding: 0 1.5%;
+}
+
+#navbar ul li a {
+  color: #958B81;
+  text-decoration: none;
+  font-size: 18px;
+}
+
+.main-header {
+  background-image: url("https://cdn.vox-cdn.com/thumbor/ufh2N5hs2Jq5GT2xMFrQ_Nodgp8=/0x0:5760x3840/1200x900/filters:focal(2420x1460:3340x2380)/cdn.vox-cdn.com/uploads/chorus_image/image/55306753/shutterstock_274960727.0.jpg");
+  background-size: cover;
+  background-position: 50% 20%;
+  height: 80vh;
+}
+
+.main-header h1, .main-header h2, .search-grid p {
+  color: whitesmoke;
+}
+
+.search-grid {
+  text-align: center;
+  padding-top: 6%;
+  justify-content: center;
+  display: grid;
+  grid-template: 300px / 55% 25%;
+  grid-gap: 1%;
+}
+
+.search-grid div {
+  background-color: rgba(30, 53, 62, 0.72);
+  border-radius: 3px;
+  padding: 1% 2% 3% 2%;
+}
+
+.search-grid div:nth-child(2) {
+  padding: 1% 5% 3 % 5%;
+}
+
+.title-head {
+  text-transform: uppercase;
+  margin-top: 0;
+  font-size: 2.5em;
+  letter-spacing: 3px;
+}
+
 .image-grid {
   display: grid;
 }
 
 .image-grid div {
-  background-image: url(http://lorempixel.com/output/city-q-c-640-480-3.jpg);
+  background-image: url("http://lorempixel.com/output/city-q-c-640-480-3.jpg");
   height: 200px;
   width: 400px;
 }
